# genart-visions

./: .gitignore  pyproject.toml  shell.nix  todo.txt
src/genart_visions/: __init__.py  draw_lib.py  flowfield.py  flowfield_type.py  main.py  particle.py  sketch.py  test2.py  utils.py  vision.py  vision1.py  vision2.py
src/genart_visions/lib/: primitives.py  utils.py
