[project]
name = "genart-visions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "pygame~=2.4",
    "py5>=0.10.3a1",
    "typing-extensions>=4.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
executionEnvironments = [{root = "src"}, {root = "src/genart_visions"}]
include = ["src/genart_visions"]
extraPaths = ["src/genart_visions"]
